--- a/stock_picking_invoice_link/i18n/fr.po
+++ b/stock_picking_invoice_link/i18n/fr.po
@@ -1,96 +1,70 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# * stock_picking_invoice_link
+#	* stock_picking_invoice_link
 #
-# Translators:
-# OCA Transbot <transbot@odoo-community.org>, 2017
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 9.0c\n"
+"Project-Id-Version: Odoo Server 8.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-01-23 11:56+0000\n"
-"PO-Revision-Date: 2017-01-23 11:56+0000\n"
-"Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2017\n"
-"Language-Team: French (https://www.transifex.com/oca/teams/23907/fr/)\n"
-"Language: fr\n"
+"POT-Creation-Date: 2014-11-19 21:47+0000\n"
+"PO-Revision-Date: 2014-11-19 21:47+0000\n"
+"Last-Translator: <>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: \n"
 
 #. module: stock_picking_invoice_link
-#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_stock_move__invoice_line_ids
+#: model:ir.model,name:stock_picking_invoice_link.model_account_invoice
+#: view:stock.picking:stock_picking_invoice_link.view_picking_form
+#: field:stock.picking,invoice_id:0
+msgid "Invoice"
+msgstr "Facture"
+
+#. module: stock_picking_invoice_link
+#: model:ir.model,name:stock_picking_invoice_link.model_account_invoice_line
+#: field:stock.move,invoice_line_id:0
 msgid "Invoice Line"
-msgstr ""
+msgstr "Lignes de facture"
 
 #. module: stock_picking_invoice_link
-#: model_terms:ir.ui.view,arch_db:stock_picking_invoice_link.view_move_form
-#: model_terms:ir.ui.view,arch_db:stock_picking_invoice_link.view_move_picking_form
-msgid "Invoice Lines"
-msgstr ""
+#: field:stock.picking,invoice_view_xmlid:0
+msgid "Invoice View XMLID"
+msgstr "XMLID de la vue facture"
 
 #. module: stock_picking_invoice_link
-#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_stock_picking__invoice_ids
-#: model_terms:ir.ui.view,arch_db:stock_picking_invoice_link.view_picking_form
-msgid "Invoices"
-msgstr ""
+#: model:ir.model,name:stock_picking_invoice_link.model_stock_picking
+msgid "Picking List"
+msgstr "Bon de livraison"
 
 #. module: stock_picking_invoice_link
-#: model:ir.model,name:stock_picking_invoice_link.model_account_move
-msgid "Journal Entries"
-msgstr ""
-
-#. module: stock_picking_invoice_link
-#: model:ir.model,name:stock_picking_invoice_link.model_account_move_line
-msgid "Journal Item"
-msgstr ""
-
-#. module: stock_picking_invoice_link
-#: model_terms:ir.ui.view,arch_db:stock_picking_invoice_link.invoice_form
+#: view:account.invoice:stock_picking_invoice_link.invoice_form
+#: view:account.invoice:stock_picking_invoice_link.invoice_supplier_form
 msgid "Pickings"
-msgstr "Préparations"
+msgstr "Livraisons"
 
 #. module: stock_picking_invoice_link
-#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_account_move__picking_ids
+#: field:account.invoice,picking_ids:0
 msgid "Related Pickings"
-msgstr ""
+msgstr "Livraisons associées"
 
 #. module: stock_picking_invoice_link
-#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_account_move_line__move_line_ids
+#: field:account.invoice.line,move_line_ids:0
 msgid "Related Stock Moves"
-msgstr ""
+msgstr "Mouvements de stock associés"
 
 #. module: stock_picking_invoice_link
-#: model:ir.model.fields,help:stock_picking_invoice_link.field_account_move__picking_ids
-msgid ""
-"Related pickings (only when the invoice has been generated from a sale "
-"order)."
-msgstr ""
+#: help:account.invoice,picking_ids:0
+msgid "Related pickings (only when the invoice has been generated from the picking)."
+msgstr "Livraisons associées (uniquement quand la facture a été générée à partir de la livraison)."
 
 #. module: stock_picking_invoice_link
-#: model:ir.model.fields,help:stock_picking_invoice_link.field_account_move_line__move_line_ids
-msgid ""
-"Related stock moves (only when the invoice has been generated from a sale "
-"order)."
-msgstr ""
-
-#. module: stock_picking_invoice_link
-#: model:ir.model,name:stock_picking_invoice_link.model_sale_order_line
-msgid "Sales Order Line"
-msgstr ""
+#: help:account.invoice.line,move_line_ids:0
+msgid "Related stock moves (only when the invoice has been generated from the picking)."
+msgstr "Mouvements de stock associés (uniquement quand la facture a été générée à partir de la livraison)."
 
 #. module: stock_picking_invoice_link
 #: model:ir.model,name:stock_picking_invoice_link.model_stock_move
 msgid "Stock Move"
 msgstr "Mouvement de stock"
-
-#. module: stock_picking_invoice_link
-#: model:ir.model,name:stock_picking_invoice_link.model_stock_picking
-msgid "Transfer"
-msgstr "Transfert"
-
-#. module: stock_picking_invoice_link
-#: code:addons/stock_picking_invoice_link/models/stock_move.py:0
-#, python-format
-msgid "You can not modify an invoiced stock move"
-msgstr ""
