--- a/stock_picking_invoice_link/i18n/de.po
+++ b/stock_picking_invoice_link/i18n/de.po
@@ -1,96 +1,108 @@
-# Translation of Odoo Server.
+# Translation of OpenERP Server.
 # This file contains the translation of the following modules:
-# * stock_picking_invoice_link
+# 	* stock_picking_invoice_link
 #
-# Translators:
-# OCA Transbot <transbot@odoo-community.org>, 2017
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 9.0c\n"
+"Project-Id-Version: OpenERP Server 7.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-01-23 11:56+0000\n"
-"PO-Revision-Date: 2017-01-23 11:56+0000\n"
-"Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2017\n"
-"Language-Team: German (https://www.transifex.com/oca/teams/23907/de/)\n"
-"Language: de\n"
+"POT-Creation-Date: 2015-02-01 15:29+0000\n"
+"PO-Revision-Date: 2015-02-01 16:34+0100\n"
+"Last-Translator: Rudolf Schnapka <rs@techno-flex.de>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.5.4\n"
+"Language: de\n"
 
 #. module: stock_picking_invoice_link
-#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_stock_move__invoice_line_ids
-msgid "Invoice Line"
-msgstr ""
-
-#. module: stock_picking_invoice_link
-#: model_terms:ir.ui.view,arch_db:stock_picking_invoice_link.view_move_form
-#: model_terms:ir.ui.view,arch_db:stock_picking_invoice_link.view_move_picking_form
-msgid "Invoice Lines"
-msgstr ""
-
-#. module: stock_picking_invoice_link
-#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_stock_picking__invoice_ids
-#: model_terms:ir.ui.view,arch_db:stock_picking_invoice_link.view_picking_form
-msgid "Invoices"
-msgstr ""
-
-#. module: stock_picking_invoice_link
-#: model:ir.model,name:stock_picking_invoice_link.model_account_move
-msgid "Journal Entries"
-msgstr ""
-
-#. module: stock_picking_invoice_link
-#: model:ir.model,name:stock_picking_invoice_link.model_account_move_line
-msgid "Journal Item"
-msgstr ""
-
-#. module: stock_picking_invoice_link
-#: model_terms:ir.ui.view,arch_db:stock_picking_invoice_link.invoice_form
-msgid "Pickings"
-msgstr "Pickaufträge"
-
-#. module: stock_picking_invoice_link
-#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_account_move__picking_ids
-msgid "Related Pickings"
-msgstr ""
-
-#. module: stock_picking_invoice_link
-#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_account_move_line__move_line_ids
-msgid "Related Stock Moves"
-msgstr ""
-
-#. module: stock_picking_invoice_link
-#: model:ir.model.fields,help:stock_picking_invoice_link.field_account_move__picking_ids
-msgid ""
-"Related pickings (only when the invoice has been generated from a sale "
-"order)."
-msgstr ""
-
-#. module: stock_picking_invoice_link
-#: model:ir.model.fields,help:stock_picking_invoice_link.field_account_move_line__move_line_ids
-msgid ""
-"Related stock moves (only when the invoice has been generated from a sale "
-"order)."
-msgstr ""
-
-#. module: stock_picking_invoice_link
-#: model:ir.model,name:stock_picking_invoice_link.model_sale_order_line
-msgid "Sales Order Line"
-msgstr ""
+#: view:stock.move:0
+msgid "Traceability"
+msgstr "Verfolgbarkeit"
 
 #. module: stock_picking_invoice_link
 #: model:ir.model,name:stock_picking_invoice_link.model_stock_move
 msgid "Stock Move"
-msgstr "Lagerbuchung"
+msgstr "Bestandsbuchungen"
+
+#. module: stock_picking_invoice_link
+#: model:ir.model,name:stock_picking_invoice_link.model_stock_picking_in
+msgid "Incoming Shipments"
+msgstr "Wareneingang"
+
+#. module: stock_picking_invoice_link
+#: help:account.invoice,picking_ids:0
+msgid ""
+"Related pickings (only when the invoice has been generated from the picking)."
+msgstr ""
+"Zugehörige Kommissionierungen (nur wenn Rechnung aus Kommissionierung "
+"gebildet wurde)."
+
+#. module: stock_picking_invoice_link
+#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_stock_picking_invoice_view_xmlid
+#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_stock_picking_invoice_view_xmlid_4946
+#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_stock_picking_invoice_view_xmlid_4948
+#: field:stock.picking,invoice_view_xmlid:0
+#: field:stock.picking.in,invoice_view_xmlid:0
+#: field:stock.picking.out,invoice_view_xmlid:0
+msgid "Invoice View XMLID"
+msgstr "Rechnungssicht XML-ID"
+
+#. module: stock_picking_invoice_link
+#: field:account.invoice,picking_ids:0
+#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_account_invoice_picking_ids
+msgid "Related Pickings"
+msgstr "Zugehörige Kommissionierungen"
+
+#. module: stock_picking_invoice_link
+#: view:account.invoice:0
+msgid "Pickings"
+msgstr "Kommissionierungen"
+
+#. module: stock_picking_invoice_link
+#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_stock_move_invoice_line_id
+#: field:stock.move,invoice_line_id:0
+msgid "Invoice line"
+msgstr "Rechnungsposition"
+
+#. module: stock_picking_invoice_link
+#: model:ir.model,name:stock_picking_invoice_link.model_account_invoice_line
+msgid "Invoice Line"
+msgstr "Rechnungsposition"
+
+#. module: stock_picking_invoice_link
+#: field:account.invoice.line,move_line_ids:0
+#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_account_invoice_line_move_line_ids
+msgid "Related Stock Moves"
+msgstr "Zugehörige Bestandsbuchungen"
+
+#. module: stock_picking_invoice_link
+#: model:ir.model,name:stock_picking_invoice_link.model_account_invoice
+#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_stock_picking_invoice_id
+#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_stock_picking_invoice_id_4947
+#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_stock_picking_invoice_id_4949
+#: field:stock.picking,invoice_id:0 view:stock.picking.in:0
+#: field:stock.picking.in,invoice_id:0 view:stock.picking.out:0
+#: field:stock.picking.out,invoice_id:0
+msgid "Invoice"
+msgstr "Rechnung"
 
 #. module: stock_picking_invoice_link
 #: model:ir.model,name:stock_picking_invoice_link.model_stock_picking
-msgid "Transfer"
-msgstr "Lieferung vornehmen"
+msgid "Picking List"
+msgstr "Kommissionierliste"
 
 #. module: stock_picking_invoice_link
-#: code:addons/stock_picking_invoice_link/models/stock_move.py:0
-#, python-format
-msgid "You can not modify an invoiced stock move"
+#: help:account.invoice.line,move_line_ids:0
+msgid ""
+"Related stock moves (only when the invoice has been generated from the "
+"picking)."
 msgstr ""
+"Zugehörige Bestandsbuchungen (nur wenn Rechnung aus Kommissionierung "
+"gebildet wurde)."
+
+#. module: stock_picking_invoice_link
+#: model:ir.model,name:stock_picking_invoice_link.model_stock_picking_out
+msgid "Delivery Orders"
+msgstr "Lieferaufträge"
