--- a/stock_picking_invoice_link/i18n/es.po
+++ b/stock_picking_invoice_link/i18n/es.po
@@ -1,102 +1,70 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# * stock_picking_invoice_link
+#   * stock_picking_invoice_link
 #
-# Translators:
-# OCA Transbot <transbot@odoo-community.org>, 2017
-# Pedro M. Baeza <pedro.baeza@gmail.com>, 2017
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 10.0\n"
+"Project-Id-Version: Odoo Server 8.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-25 23:40+0000\n"
-"PO-Revision-Date: 2020-06-26 01:42+0200\n"
-"Last-Translator: Pedro M. Baeza <pedro.baeza@gmail.com>, 2017\n"
-"Language-Team: Spanish (https://www.transifex.com/oca/teams/23907/es/)\n"
-"Language: es\n"
+"POT-Creation-Date: 2015-02-03 13:30+0000\n"
+"PO-Revision-Date: 2015-02-03 13:30+0000\n"
+"Last-Translator: <>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.6\n"
+"Content-Transfer-Encoding: \n"
+"Plural-Forms: \n"
 
 #. module: stock_picking_invoice_link
-#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_stock_move__invoice_line_ids
+#: model:ir.model,name:stock_picking_invoice_link.model_account_invoice
+#: view:stock.picking:stock_picking_invoice_link.view_picking_form
+#: field:stock.picking,invoice_id:0
+msgid "Invoice"
+msgstr "Factura"
+
+#. module: stock_picking_invoice_link
+#: model:ir.model,name:stock_picking_invoice_link.model_account_invoice_line
+#: field:stock.move,invoice_line_id:0
 msgid "Invoice Line"
 msgstr "Línea de factura"
 
 #. module: stock_picking_invoice_link
-#: model_terms:ir.ui.view,arch_db:stock_picking_invoice_link.view_move_form
-#: model_terms:ir.ui.view,arch_db:stock_picking_invoice_link.view_move_picking_form
-msgid "Invoice Lines"
-msgstr "Líneas de factura"
+#: field:stock.picking,invoice_view_xmlid:0
+msgid "Invoice View XMLID"
+msgstr "XMLID de la vista"
 
 #. module: stock_picking_invoice_link
-#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_stock_picking__invoice_ids
-#: model_terms:ir.ui.view,arch_db:stock_picking_invoice_link.view_picking_form
-msgid "Invoices"
-msgstr "Facturas"
+#: model:ir.model,name:stock_picking_invoice_link.model_stock_picking
+msgid "Picking List"
+msgstr "Albarán"
 
 #. module: stock_picking_invoice_link
-#: model:ir.model,name:stock_picking_invoice_link.model_account_move
-msgid "Journal Entries"
-msgstr "Asientos contables"
-
-#. module: stock_picking_invoice_link
-#: model:ir.model,name:stock_picking_invoice_link.model_account_move_line
-msgid "Journal Item"
-msgstr "Apunte contable"
-
-#. module: stock_picking_invoice_link
-#: model_terms:ir.ui.view,arch_db:stock_picking_invoice_link.invoice_form
+#: view:account.invoice:stock_picking_invoice_link.invoice_form
+#: view:account.invoice:stock_picking_invoice_link.invoice_supplier_form
 msgid "Pickings"
 msgstr "Albaranes"
 
 #. module: stock_picking_invoice_link
-#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_account_move__picking_ids
+#: field:account.invoice,picking_ids:0
 msgid "Related Pickings"
 msgstr "Albaranes relacionados"
 
 #. module: stock_picking_invoice_link
-#: model:ir.model.fields,field_description:stock_picking_invoice_link.field_account_move_line__move_line_ids
+#: field:account.invoice.line,move_line_ids:0
 msgid "Related Stock Moves"
 msgstr "Movimientos de existencias relacionados"
 
 #. module: stock_picking_invoice_link
-#: model:ir.model.fields,help:stock_picking_invoice_link.field_account_move__picking_ids
-msgid ""
-"Related pickings (only when the invoice has been generated from a sale "
-"order)."
-msgstr ""
-"Albaranes relacionados (solo cuando la factura ha sido generada desde un "
-"pedido de venta)."
+#: help:account.invoice,picking_ids:0
+msgid "Related pickings (only when the invoice has been generated from the picking)."
+msgstr "Albaranes relacionados (solo cuando la factura ha sido generada desde albarán)."
 
 #. module: stock_picking_invoice_link
-#: model:ir.model.fields,help:stock_picking_invoice_link.field_account_move_line__move_line_ids
-msgid ""
-"Related stock moves (only when the invoice has been generated from a sale "
-"order)."
-msgstr ""
-"Movimientos de existencias relacionados (solo cuando la factura ha sido "
-"generada desde un pedido de venta)."
-
-#. module: stock_picking_invoice_link
-#: model:ir.model,name:stock_picking_invoice_link.model_sale_order_line
-msgid "Sales Order Line"
-msgstr "Línea de pedido de venta"
+#: help:account.invoice.line,move_line_ids:0
+msgid "Related stock moves (only when the invoice has been generated from the picking)."
+msgstr "Movimientos de existencias relacionados (solo cuando la factura ha sido generada desde albarán)."
 
 #. module: stock_picking_invoice_link
 #: model:ir.model,name:stock_picking_invoice_link.model_stock_move
 msgid "Stock Move"
 msgstr "Movimiento de existencias"
-
-#. module: stock_picking_invoice_link
-#: model:ir.model,name:stock_picking_invoice_link.model_stock_picking
-msgid "Transfer"
-msgstr "Transferir"
-
-#. module: stock_picking_invoice_link
-#: code:addons/stock_picking_invoice_link/models/stock_move.py:0
-#, python-format
-msgid "You can not modify an invoiced stock move"
-msgstr "No puede modificar un movimiento de existencias facturado"
