--- a/stock_picking_invoice_link/i18n/stock_picking_invoice_link.pot
+++ b/stock_picking_invoice_link/i18n/stock_picking_invoice_link.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -110,6 +110,7 @@ msgid "Transfer"
 msgstr ""
 
 #. module: stock_picking_invoice_link
+#. odoo-python
 #: code:addons/stock_picking_invoice_link/models/stock_move.py:0
 #, python-format
 msgid "You can not modify an invoiced stock move"
